<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

                <!-- ActionBar -->

                <android.support.v7.widget.Toolbar
                    android:id="@+id/action_toolbar"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/movie_poster_image"
                    android:layout_width="175dp"
                    android:layout_height="300dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/action_toolbar"
                    android:contentDescription="@string/movie_poster_image"/>

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:padding="2dp"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/action_toolbar"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/released_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/released_on"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_image"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_image"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/released_on" />

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="7dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_image"
                    app:layout_constraintTop_toBottomOf="@+id/release_date" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/vote_average"
                    app:layout_constraintTop_toBottomOf="@+id/release_date"
                    app:srcCompat="@drawable/ic_action_star"
                    android:contentDescription="@string/star_image"
                    android:id="@+id/starImage" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_rv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/starImage"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/overview" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_poster_image" />

                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:scrollHorizontally="true"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview"
                    android:layout_marginEnd="2dp" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    tools:text="@string/reviews"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintTop_toBottomOf="@+id/overview_text"
                    app:layout_constraintLeft_toRightOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_rv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/review" />

                <ImageView
                    android:id="@+id/heart_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:onClick="AddToFavourite"
                    android:visibility="visible"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title"
                    app:srcCompat="@drawable/ic_action_heart_white"
                    android:contentDescription="@string/favourite_off" />

                <ImageView
                    android:id="@+id/heart_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:onClick="RemoveFromFavourite"
                    android:visibility="invisible"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title"
                    app:srcCompat="@drawable/ic_action_heart_red"
                    android:contentDescription="@string/favourite_on" />

            <ProgressBar
                android:id="@+id/loading_indicator"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@+id/action_toolbar"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/loading_indicator"
                android:layout_centerHorizontal="true"
                android:text="@string/error_message"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="invisible"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/loading_indicator"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.054"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


        </android.support.constraint.ConstraintLayout>

</ScrollView>